2002-04-04  Bruno Haible  <bruno@clisp.org>

	* po-lex.h (po_gram_error): Use __VA_ARGS__ + 0 instead of __VA_ARGS__.
	(po_gram_error_at_line): LIkewise.
	Fixes syntax error when __VA_ARGS__ is empty.
	Reported by Trond Eivind Glomsrød <teg@redhat.com>.

2002-04-04  Bruno Haible  <bruno@clisp.org>

	* msginit.c (find_pot): Add dummy return, to avoid gcc warning.

2002-03-12  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.1 released.

2002-03-10  Bruno Haible  <bruno@clisp.org>

	* x-python.c (phase7_getuc): Change type of buf to 'unsigned char[]'.

2002-03-07  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (msginit_LDADD): Use @INTL_LIBTOOL_SUFFIX_PREFIX@o
	instead of $(OBJEXT).

2002-03-05  Bruno Haible  <bruno@clisp.org>

	* hostname.c (s6_addr16): Define if not defined by the system.
	(ipv6_ntop): Use s6_addr16 instead of in6_u.u6_addr16.

2002-03-05  Bruno Haible  <bruno@clisp.org>

	* xgettext.c (usage): Mention languages Python, awk, Tcl, RST, Glade.

2002-03-03  Bruno Haible  <bruno@clisp.org>

	* message.h (format_type): New enum value 'format_tcl'.
	(NFORMATS): Increment.
	* message.c (format_language): Add format_tcl entry.
	(format_language_pretty): Likewise.
	* format.h (formatstring_tcl): New declaration.
	* format-tcl.c: New file.
	* format.c (formatstring_parsers): Add formatstring_tcl.
	* x-tcl.h: New file.
	* x-tcl.c: New file.
	* xgettext.c: Include x-tcl.h.
	(main): Call x_tcl_extract_all, x_tcl_keyword.
	(language_to_scanner): Add Tcl rule.
	(extension_to_language): Add Tcl rule.
	* write-tcl.h: New file.
	* write-tcl.c: New file.
	* msgfmt.c: Include write-tcl.h.
	(tcl_mode, tcl_locale_name, tcl_base_directory): New variables.
	(long_options): Add option "--tcl".
	(main): Handle --tcl option. Set tcl_mode, tcl_locale_name,
	tcl_base_directory. More checks for contradicting options. Call
	msgdomain_write_tcl.
	(usage): Mention Tcl mode.
	(format_directive_domain): Ignore domain directive if in Tcl mode.
	* read-tcl.h: New file.