@@ -1,3 +1,9 @@
+2002-04-15  Bruno Haible  <bruno@clisp.org>
+
+	* po-lex.h (po_gram_error): Treat Apple's version of GCC like non-GCC.
+	* po-lex.c (po_gram_error): Likewise.
+	Reported by Richard S. Blake <blakers@presence-group.com>.
+
 2002-04-04  Bruno Haible  <bruno@clisp.org>
 
 	* po-lex.h (po_gram_error): Use __VA_ARGS__ + 0 instead of __VA_ARGS__.
